--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,68 @@
   text-align: center;
 }
 
+.navbar {
+  position: sticky;
+  top: 0px;
+  height: 70px;
+  background-color: black;
+  opacity: 0.75;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 30px 0px 30px;
+  margin-bottom: -70px;
+  z-index: 5;
+}
+
+.navbarLogo {
+  color: white;
+  font-family: "MonteCarlo", cursive;
+  font-size: 2.5rem;
+}
+
+/*
+  This is the container for all the navbar links ( <ul> )
+  */
+.navbarList {
+  display: flex;
+  list-style: none;
+}
+
+/*
+  This is a single item ( <li> ) in the list
+  */
+.navbarItem {
+  white-space: nowrap;
+}
+
+/*
+  The anchor tag ( <a> ) for the navbar links
+  */
+.navbarLink {
+  font-size: 0.85rem;
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 10px;
+  margin: 0px 5px;
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
+  border-color: transparent;
+  transition: 250ms;
+}
+
+.navbarLink:hover {
+  border-color: white;
+  transition: 250ms;
+}
+
+.navbarMenu {
+  color: white;
+  display: none;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 800px) {
   .slider {
     flex-direction: column;
@@ -71,5 +133,52 @@
 
   .sliderImage {
     width: 100%;
+  }
+
+  .navbarList {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    top: 70px;
+    left: -100%;
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    transition: all 0.5s ease;
+  }
+
+  .navbarListActive {
+    left: 0;
+  }
+
+  .navbarMenu {
+    display: block;
+  }
+
+  .navbarItem {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0;
+    flex: 1;
+  }
+
+  .navbarLink {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+    border-width: 0px;
+    background-color: black;
+    opacity: 0.75;
+  }
+
+  .navbarLink:hover {
+    border-width: 0px;
+    opacity: 0.9;
   }
 }
